[package]
name = "camaracapoeira-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.28"
reqwest = { version = "0.12.24", features = ["stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
